@@ -1,3 +1,10 @@
+Overview of changes from 1.1.0-beta to 1.1.0
+==
+* Fixes
+  o Critical
+    - libuim
+      - fix a GC corruption that causes SEGV (YamaKen)
+
 Overview of changes from 1.1.0-alpha to 1.1.0-beta
 ==
 * New features
